syntax = "proto3";

package list;

service List {
	rpc CreateItem(CreateItemRequest) returns (CreateItemResponse) {}
	rpc GetUserItems(GetUserItemsRequest) returns (GetUserItemsResponse) {}
	rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {}
}

message CreateItemRequest {
	string message = 1;
	string userId = 2;
}

message CreateItemResponse {
	string message = 1;
	uint64 code = 2;
	string id = 3;
}

message GetUserItemsRequest {
	string userId = 1;
}

message GetUserItemsResponse {
	repeated Item items = 1;
	uint64 code = 2;
}

message Item {
	string id = 1;
	string message = 2;
	string userId = 3;
}

message DeleteItemRequest {
	string id = 1;
}

message DeleteItemResponse {
	string message = 1;
	uint64 code = 2;
}
